# neoncoast

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-15-neoncoast-v3-implementation.md  2026-06-15-neoncoast-v4-implementation.md  2026-06-15-neoncoast-v5-fix-plan.md
res/: resources.rc
src/: audio.c  audio.h  common.h  config.c  config.h  game.c  game.h  highscore.c  highscore.h  input.c  input.h  main.c  models.c  models.h  race.c  race.h  render.c  render.h  road.c  road.h  ui.c  ui.h
tools/: genicon.c
